<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>hu.sch</groupId>
    <artifactId>sch-pek</artifactId>
    <packaging>pom</packaging>
    <version>2.4.13</version>
    <name>SCH PéK Application</name>
    <url>http://stewie.sch.bme.hu/projects/korok</url>
    <inceptionYear>2008</inceptionYear>
    
    <licenses>
        <license>
            <name>BSD License (original)</name>
            <url>http://www.opensource.org/licenses/bsd-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>hege</id>
            <name>Adam Lantos</name>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>messo</id>
            <name>Balint Krivan</name>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>aldaris</id>
            <name>Peter Major</name>
            <email>majorpetya at sch dot bme dot hu</email>
            <timezone>+1</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Balazs Varga</name>
            <timezone>+1</timezone>
        </contributor>
        <contributor>
            <name>Gabor Halasz</name>
            <timezone>+1</timezone>
        </contributor>
    </contributors>

    <organization>
        <name>Kir-Dev</name>
        <url>https://kir-dev.sch.bme.hu</url>
    </organization>
    <mailingLists>
        <mailingList>
            <name>jee-dev</name>
            <post>jee-dev [at] sch [dot] bme [dot] hu</post>
            <subscribe>jee-dev-subscribe [at] sch [dot] bme [dot] hu</subscribe>
            <unsubscribe>jee-dev-unsubscribe [at] sch [dot] bme [dot] hu</unsubscribe>
            <archive>https://lists.sch.bme.hu/wws/arc/jee-dev</archive>
        </mailingList>
    </mailingLists>

    <issueManagement>
        <system>Redmine</system>
        <url>https://kir-dev.sch.bme.hu/redmine</url>
    </issueManagement>

    <ciManagement>
        <system>Jenkins</system>
        <url>TBD</url>
    </ciManagement>

    <distributionManagement>
        <site>
            <id>site</id>
            <name>${project.name}</name>
            <url>file:///var/www/stewie.sch.bme.hu/projects/korok</url>
        </site>
    </distributionManagement>

    <scm>
        <connection>scm:http://stewie.sch.bme.hu/pub/aldaris/korok</connection>
        <url>http://stewie.sch.bme.hu/gitweb</url>
    </scm>

    <profiles>
        <profile>
            <id>hudson</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-site-plugin</artifactId>
                            <version>2.1.1</version>
                        </plugin>
                        <plugin>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>2.2</version>
                        </plugin>
                        <plugin>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.7</version>
                        </plugin>
                        <plugin>
                            <artifactId>maven-source-plugin</artifactId>
                            <version>2.1.2</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.3.1</version>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <artifactId>maven-site-plugin</artifactId>
                        <!-- Kell, hogy tényleg menjen az UTF-8 -->
                        <configuration>
                            <outputEncoding>UTF-8</outputEncoding>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <configuration>
                            <configLocation>resources/checkstyle.xml</configLocation>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.codehaus.plexus</groupId>
                                <artifactId>plexus-velocity</artifactId>
                                <version>1.1.3</version>
                                <exclusions>
                                    <exclusion>
                                <!--
     Use the version specified by checkstyle:checkstyle instead
     -->
                                        <artifactId>commons-collections</artifactId>
                                        <groupId>commons-collections</groupId>
                                    </exclusion>
                                    <exclusion>
                                        <artifactId>plexus-utils</artifactId>
                                        <groupId>plexus</groupId>
                                    </exclusion>
                                </exclusions>
                            </dependency>
                        </dependencies>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <minmemory>128m</minmemory>
                            <maxmemory>256m</maxmemory>
                            <quiet>true</quiet>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <inherited>true</inherited>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <configuration>
                            <findbugsXmlOutput>true</findbugsXmlOutput>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <inherited>true</inherited>
                        <configuration>
                            <skipTests>false</skipTests>
                            <forkMode>once</forkMode>
                            <argLine>-Xmx512m -XX:MaxPermSize=256m -Dkorok.test.config=../resources/test/config.properties</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>

            <reporting>
                <plugins>
                    <plugin>
                        <artifactId>maven-pmd-plugin</artifactId>
                        <version>2.5</version>
                        <configuration>
                            <targetJdk>1.6</targetJdk>
                            <linkXRef>true</linkXRef>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-jxr-plugin</artifactId>
                        <version>2.2</version>
                    </plugin>
                </plugins>
            </reporting>
    
            <dependencies>
                <dependency>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-entitymanager</artifactId>
                    <version>3.5.0-Final</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-ear</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-ejb-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-ejb-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-test</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>hu.sch</groupId>
                <artifactId>sch-pek-web-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.5.8</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.14</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.7</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.glassfish.extras</groupId>
                <artifactId>glassfish-embedded-all</artifactId>
                <version>3.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>6.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-annotations</artifactId>
                <version>${hibernate.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.4.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
                <plugin>
                    <groupId>com.mycila.maven-license-plugin</groupId>
                    <artifactId>maven-license-plugin</artifactId>
                    <version>1.8.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-ejb-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.6</source>
                    <target>1.6</target>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <configuration>
                    <header>LICENSE</header>
                    <properties>
                        <year>2008-2010</year>
                        <username>Peter Major</username>
                    </properties>
                    <excludes>
                        <exclude>**/*.html</exclude>
                        <exclude>resources/**</exclude>
                    </excludes>
                    <useDefaultExcludes>true</useDefaultExcludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>wicket-tree</id>
            <name>Wicket-tree Repository</name>
            <url>http://wicket-tree.googlecode.com/svn/repo</url>
        </repository>
    </repositories>

    <modules>
        <module>sch-pek-domain</module>
        <module>sch-pek-ejb-services</module>
        <module>sch-pek-ejb-impl</module>
        <module>sch-pek-web</module>
        <module>sch-pek-web-services</module>
        <module>sch-pek-ear</module>
        <module>sch-pek-test</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <hibernate.version>3.5.0-Final</hibernate.version>
    </properties>
</project>
